[package]
name = "ulock-sys"
version = "0.1.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2018"

[features]
# emulate weak linking using dlsym. NB: this is experimental and may have bugs.
experimental-weak = []

# emulate weak linking, even on arm macos (which should always have the API).
weak-aarch64-macos = []

[dependencies]
cty = "0.2"

[package.metadata.docs.rs]
features = ["experimental-weak"]
all-features = false
no-default-features = true
default-target = "x86_64-apple-darwin"
